--- a/Artifacts4.html
+++ b/Artifacts4.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html
-   PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd" >
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 	<title>Artifacts04</title>
-	<meta name="description" content="Artifact 3 - Rhombus Example">
+	<meta name="description" content="Artifact 4 ">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="Artifacts04.css">
 	<script src="Artifacts04.js" ></script>
