--- a/Artifacts4.html
+++ b/Artifacts4.html
@@ -10,7 +10,7 @@
 	
 	<body>
 	<div id="container">
-	<form name="myForm" action="thankyou.html" onsubmit=" return validateForm()" >
+	<form name="myForm" action="thankyou.html" onsubmit=" return validateForm(this)" >
       <table>
         <tr>
           <td>
